src/test/resources/AttributeCheck/negative/MissingAttributeDefinitionChild.ls
class A {

  p ("${b : B}") {}

}

class B {

  inh a : int;

  b ("") {}

}
